plans-map: increase map search input font size to prevent zooming in on mobile

--- a/meinberlin/assets/scss/components_user_facing/_projects_map.scss
+++ b/meinberlin/assets/scss/components_user_facing/_projects_map.scss
@@ -60,4 +60,5 @@
 
 .projects-map__search.leaflet-control {
     z-index: 1001;
+    font-size: 1rem;
 }
